Name:    websockets
Version: 0.9.8.0

Synopsis:
  A sensible and clean way to write WebSocket-capable servers in Haskell.

Description:
 This library allows you to write WebSocket-capable servers.
 .
 An example server:
 <https://github.com/jaspervdj/websockets/blob/master/example/server.lhs>
 .
 An example client:
 <https://github.com/jaspervdj/websockets/blob/master/example/client.hs>
 .
 See also:
 .
 * The specification of the WebSocket protocol:
 <http://www.whatwg.org/specs/web-socket-protocol/>
 .
 * The JavaScript API for dealing with WebSockets:
 <http://www.w3.org/TR/websockets/>

License:       BSD3
License-file:  LICENCE
Copyright:     (c) 2010-2011 Siniša Biđin
               (c) 2011-2013 Jasper Van der Jeugt
               (c) 2011 Steffen Schuldenzucker
               (c) 2011 Alex Lang
Author:        Siniša Biđin <sinisa@bidin.cc>
               Jasper Van der Jeugt <m@jaspervdj.be>
               Steffen Schuldenzucker <steffen.schuldenzucker@googlemail.com>
               Alex Lang <lang@tsurucapital.com>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Stability:     experimental
Category:      Network
Build-type:    Simple
Cabal-version: >= 1.8

Homepage:    http://jaspervdj.be/websockets
Bug-reports: https://github.com/jaspervdj/websockets/issues

Extra-source-files:
  CHANGELOG

Flag Example
  Description: Build the example server
  Default:     False
  Manual:      True

Library
  Hs-source-dirs: src
  Ghc-options:    -Wall

  Exposed-modules:
    Network.WebSockets
    Network.WebSockets.Connection
    Network.WebSockets.Stream
    -- Network.WebSockets.Util.PubSub TODO

  Other-modules:
    Network.WebSockets.Client
    Network.WebSockets.Http
    Network.WebSockets.Hybi13
    Network.WebSockets.Hybi13.Demultiplex
    Network.WebSockets.Hybi13.Mask
    Network.WebSockets.Protocol
    Network.WebSockets.Server
    Network.WebSockets.Types

  Build-depends:
    attoparsec        >= 0.10   && < 0.14,
    base              >= 4.4    && < 5,
    base64-bytestring >= 0.1    && < 1.1,
    binary            >= 0.5    && < 0.9,
    blaze-builder     >= 0.3    && < 0.5,
    bytestring        >= 0.9    && < 0.11,
    case-insensitive  >= 0.3    && < 1.3,
    containers        >= 0.3    && < 0.6,
    network           >= 2.3    && < 2.7,
    random            >= 1.0    && < 1.2,
    SHA               >= 1.5    && < 1.7,
    text              >= 0.10   && < 1.3,
    entropy           >= 0.2.1  && < 0.4

Test-suite websockets-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests/haskell
  Main-is:        TestSuite.hs
  Ghc-options:    -Wall

  Other-modules:
    Network.WebSockets.Handshake.Tests
    Network.WebSockets.Http.Tests
    Network.WebSockets.Server.Tests
    Network.WebSockets.Tests
    Network.WebSockets.Tests.Util

  Build-depends:
    HUnit                      >= 1.2 && < 1.6,
    QuickCheck                 >= 2.7 && < 2.10,
    test-framework             >= 0.4 && < 0.9,
    test-framework-hunit       >= 0.2 && < 0.4,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    -- Copied from regular dependencies...
    attoparsec        >= 0.10   && < 0.14,
    base              >= 4      && < 5,
    base64-bytestring >= 0.1    && < 1.1,
    binary            >= 0.5    && < 0.9,
    blaze-builder     >= 0.3    && < 0.5,
    bytestring        >= 0.9    && < 0.11,
    case-insensitive  >= 0.3    && < 1.3,
    containers        >= 0.3    && < 0.6,
    network           >= 2.3    && < 2.7,
    random            >= 1.0    && < 1.2,
    SHA               >= 1.5    && < 1.7,
    text              >= 0.10   && < 1.3,
    entropy           >= 0.2.1  && < 0.4

Executable websockets-example
  If !flag(Example)
    Buildable: False

  Hs-source-dirs: example
  Main-is:        server.lhs
  Ghc-options:    -Wall

  Build-depends:
    websockets,
    -- Copied from regular dependencies...
    attoparsec        >= 0.10   && < 0.14,
    base              >= 4      && < 5,
    base64-bytestring >= 0.1    && < 1.1,
    binary            >= 0.5    && < 0.9,
    blaze-builder     >= 0.3    && < 0.5,
    bytestring        >= 0.9    && < 0.11,
    case-insensitive  >= 0.3    && < 1.3,
    containers        >= 0.3    && < 0.6,
    network           >= 2.3    && < 2.7,
    random            >= 1.0    && < 1.2,
    SHA               >= 1.5    && < 1.7,
    text              >= 0.10   && < 1.3,
    entropy           >= 0.2.1  && < 0.4

Source-repository head
  Type:     git
  Location: https://github.com/jaspervdj/websockets
